# Centaur

./: .gitignore  AGENTS.md  LICENSE  PROPOSAL.md  README.md  SUPERVISOR.md  WORKER.md  pyproject.toml  run_workflow.py
.github/workflows/: ci.yml
docs/releases/: v1.0.0-cli-stable.md
src/centaur/: __init__.py  cli.py  engine.py
src/centaur/templates/: AGENTS.md  ANALYST.md  LIBRARIAN.md  PROJECT_STATUS.md  PROPOSAL.md  SUPERVISOR.md  VALIDATOR.md  WORKER.md  __init__.py
tests/: test_cli.py  test_cli_integration.py  test_engine_runtime.py
